fix spacing issues

--- a/style-index.css
+++ b/style-index.css
@@ -1,6 +1,6 @@
 :root {
     --grey: #545F66;
-    --light: #FFF8EB;
+    --light: #e9fafa;
     --blue: #85C7F2;
     --green: #8FD5A6;
     --pink: #F92A82;
